--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,13 @@
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	      <button type="button" class="navbar-toggle collapsed" id="navbar-toggle-id" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
+	        <span class="icon-bar" id="icon-bar-id"></span>
+	        <span class="icon-bar" id="icon-bar-id"></span>
+	        <span class="icon-bar" id="icon-bar-id"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">Flixter</a>
+	      <a class="navbar-brand" id="navbar-brand-id" href="#">Flixter</a>
 	    </div>
 	
 	    <!-- Collect the nav links, forms, and other content for toggling -->
