--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,31 @@
 <div class="spacer"></div>
 
-<h1>Learn stuff from around the web!</h1>
-<h2>There's a class for everything!</h2>
+<div class="hero">
+</div>
+
+<div class="box1">
+</div>
+
+<div class="box2">
+</div>
+
+<div class="box3">
+</div>
+
+<div class="box4">
+</div>
+
+<div class="hero">
+</div>
+
+<div class="box1">
+</div>
+
+<div class="box2">
+</div>
+
+<div class="box3">
+</div>
+
+<div class="box4">
+</div>
