--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="HandheldFriendly" content="true">
-<meta name="theme-color" content="#FFFFFF">
+<meta name="theme-color" content="#a9b8b3">
 
 <html>
   <head>
