--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,29 @@
 <div class="spacer"></div>
 
+<div class="parallax">
+	<div class="parallax_layer hero .parallax_layer-back">
+	</div>
+	<div class="parallax_layer hero_text .parallax_layer-base">
+		<h1>Learn stuff from around the web.</h1>
+		<h2>There's a lesson for everything.</h2>
+	</div>
+</div>
+
+<div class="box1">
+</div>
+
+<div class="box2">
+</div>
+
+<div class="box3">
+</div>
+
+<div class="box4">
+</div>
+
+<div class="box5">
+</div>
+
 <div class="hero">
 </div>
 
@@ -15,17 +39,5 @@
 <div class="box4">
 </div>
 
-<div class="hero">
-</div>
-
-<div class="box1">
-</div>
-
-<div class="box2">
-</div>
-
-<div class="box3">
-</div>
-
-<div class="box4">
+<div class="box5">
 </div>
