fixed text size to be relative to screen size

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -4,7 +4,7 @@
 .hero h1 {
   font-family: 'Nixie One', cursive;
   color: #07223d;
-  font-size: 4.375em;
+  font-size: 8vw;
   font-weight: 400;
 }
 
@@ -12,6 +12,7 @@
   font-family: 'Nixie One', cursive;
   color: #fbeee5;
   font-weight: 400;
+  font-size: 4vw;
 }
 
 .hero {
