--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<% if browser.mobile? %>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<% else %>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<% end %>
 <meta name="HandheldFriendly" content="true">
 <meta name="theme-color" content="#442640">
 
