--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<% if browser.mobile? %>
+<% if browser.device.mobile? %>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <% else %>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
