--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,41 +1,19 @@
 <div class="spacer"></div>
 
 <div class="box hero">
-	<div class="inner">
+	<div class="inner col-xs-10">
 		<h1>Learn stuff from around the web.</h1>
 		<h2>There's a lesson for everything.</h2>
+		<br />
+		<%= link_to 'Learn More', '#', class: 'btn btn-success', id: 'btn-success-id' %>
 	</div>>
 </div>
 
 <div class="box box1">
 </div>
 
-<div class="box box2">
-</div>
-
 <div class="box box3">
 </div>
 
 <div class="box box4">
-</div>
-
-<div class="box box5">
-</div>
-
-<div class="box hero">
-</div>
-
-<div class="box box1">
-</div>
-
-<div class="box box2">
-</div>
-
-<div class="box box3">
-</div>
-
-<div class="box box4">
-</div>
-
-<div class="box box5">
 </div>
