--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <% end %>
 <meta name="HandheldFriendly" content="true">
-<meta name="theme-color" content="#000010">
+<meta name="theme-color" content="#9ecfe7">
 
 <html>
   <head>
