--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,13 @@
 
   <body>
   	<% if notice.present? %>
-    <div class="alert alert-info" id="user_alert_info">
+    <div class="alert alert-info" id="user_alert">
     	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     	<%= notice %>
     </div>
   <% end %>
   <% if alert.present? %>
-    <div class="alert alert-danger" id ="user_alert_danger">
+    <div class="alert alert-danger" id ="user_alert">
     	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     	<%= alert %>
     </div>
@@ -51,6 +51,12 @@
 	        <li><a href="#" id="nav-link-id">Link</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
+	      	<% if user_signed_in? %>
+        		<li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, id: "nav-link-id" %></li>
+      		<% else %>
+        		<li><%= link_to 'Sign In', new_user_session_path, id: "nav-link-id" %></li>
+        		<li><%= link_to 'Sign Up', new_user_registration_path, id: "nav-link-id" %></li>
+      		<% end %>
 	        <li><a href="#" id="nav-link-id">Link</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
