--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 	        <span class="icon-bar" id="icon-bar-id"></span>
 	        <span class="icon-bar" id="icon-bar-id"></span>
 	      </button>
-	      <a class="navbar-brand" id="navbar-brand-id" href="#">Flixter</a>
+	      <%= link_to 'Flixter', root_path, class: "navbar-brand", id: "navbar-brand-id" %>
 	    </div>
 	
 	    <!-- Collect the nav links, forms, and other content for toggling -->
