--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,12 +1,14 @@
 <div class="spacer"></div>
 
-<div class="box hero">
-	<div class="inner col-xs-10">
+<div class="box hero text-center">
+	<div class="inner">
+		<div class="text-center">
 		<h1>Learn stuff from around the web.</h1>
 		<h2>There's a lesson for everything.</h2>
 		<br />
 		<%= link_to 'Learn More', '#', class: 'btn btn-success', id: 'btn-success-id' %>
-	</div>>
+		</div>
+	</div>
 </div>
 
 <div class="box box1">
