--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,48 +20,61 @@
   </head>
 
   <body>
-  	<% if notice.present? %>
-    <div class="alert alert-info" id="user_alert">
-    	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    	<%= notice %>
-    </div>
-  <% end %>
-  <% if alert.present? %>
-    <div class="alert alert-danger" id ="user_alert">
-    	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    	<%= alert %>
-    </div>
-  <% end %>
-  	<nav class="navbar navbar-default" id="navbar-id">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" id="navbar-toggle-id" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar" id="icon-bar-id"></span>
-	        <span class="icon-bar" id="icon-bar-id"></span>
-	        <span class="icon-bar" id="icon-bar-id"></span>
-	      </button>
-	      <%= link_to 'Flixter', root_path, class: "navbar-brand", id: "navbar-brand-id" %>
+  	<div id="wrap">
+	  	<% if notice.present? %>
+	    <div class="alert alert-info" id="user_alert">
+	    	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+	    	<%= notice %>
 	    </div>
+	  <% end %>
+	  <% if alert.present? %>
+	    <div class="alert alert-danger" id ="user_alert">
+	    	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+	    	<%= alert %>
+	    </div>
+	  <% end %>
+	  	<nav class="navbar navbar-default" id="navbar-id">
+		  <div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" id="navbar-toggle-id" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar" id="icon-bar-id"></span>
+		        <span class="icon-bar" id="icon-bar-id"></span>
+		        <span class="icon-bar" id="icon-bar-id"></span>
+		      </button>
+		      <%= link_to 'Flixter', root_path, class: "navbar-brand", id: "navbar-brand-id" %>
+		    </div>
+		
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+		        <li><a href="#" id="nav-link-id">Link</a></li>
+		      </ul>
+		      <ul class="nav navbar-nav navbar-right">
+		      	<% if user_signed_in? %>
+	        		<li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, id: "nav-link-id" %></li>
+	      		<% else %>
+	        		<li><%= link_to 'Sign In', new_user_session_path, id: "nav-link-id" %></li>
+	        		<li><%= link_to 'Sign Up', new_user_registration_path, id: "nav-link-id" %></li>
+	      		<% end %>
+		      </ul>
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
 	
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li><a href="#" id="nav-link-id">Link</a></li>
-	      </ul>
-	      <ul class="nav navbar-nav navbar-right">
-	      	<% if user_signed_in? %>
-        		<li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, id: "nav-link-id" %></li>
-      		<% else %>
-        		<li><%= link_to 'Sign In', new_user_session_path, id: "nav-link-id" %></li>
-        		<li><%= link_to 'Sign Up', new_user_registration_path, id: "nav-link-id" %></li>
-      		<% end %>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
-
-    <%= yield %>
+	    <%= yield %>
+    </div>
+    
+    <br class="clr" />
+    
+    <div id="footer">
+    	<div class="container">
+    		<b>Footer Here</b>
+    		<br />
+    		<%= link_to 'Link', '#', id: "footer-link-id" %>
+    	</div>
+    </div>
+    
   </body>
 </html>
